--- a/README
+++ b/README
@@ -1,33 +1,31 @@
   EventSource polyfill for browsers, that doesn't implement native EventSource
   
-  
   Uses XMLHttpRequest:
-  "server push" (XMLHTTPRequest Interactive state) logic for Firefox
+  "server push" (XMLHTTPRequest Interactive state) logic for Firefox, XDomainRequest for IE8+
   "long polling" or "polling" logic for other browsers
 
-  
   Browser Support:
   IE7+, others
 
-  
   Advantages:
-  Based on last specification of EventSource.
-  "server push" for Firefox
-  Polyfill is independent form document methods (addEventListener), so you
-  can use it in a Web Worker's scope.
+  * Based on last specification of EventSource.
+  * "server push" for Firefox
+  * "server push" for IE 8+ with XDomainRequest
+  * Polyfill is independent form document methods (addEventListener), so you
+  * can use it in a Web Worker's scope.
   
   
   Server-side requirements:
   When "server push" not supported, "Polling" HTTP Header is sended on each request
   to tell your server side script to close connection after 
   sending a data.
+  XDomainRequest sends "Last-Event-ID" with POST body (XDomainRequest object does not have a setRequestHeader method)
+  Also XDomainRequest requires send two kilobyte “prelude” at the top of the response stream.
+  ( http://blogs.msdn.com/b/ieinternals/archive/2010/04/06/comet-streaming-in-internet-explorer-with-xmlhttprequest-and-xdomainrequest.aspx?PageIndex=1 )
 
-  
-  Specs:
+  http://weblog.bocoup.com/javascript-eventsource-now-available-in-firefox
   http://www.w3.org/TR/eventsource/
 
-  
   Other EventSource polyfills:
-  http://weblog.bocoup.com/javascript-eventsource-now-available-in-firefox
   https://github.com/remy/polyfills/blob/master/EventSource.js by Remy Sharp
   https://github.com/rwldrn/jquery.eventsource by rick waldron
